test/data/valid-messages/standard-hello.message
# Standard org.freedesktop.DBus.Hello message

VALID_HEADER method_call
FIELD_NAME path
TYPE OBJECT_PATH
OBJECT_PATH '/org/freedesktop/DBus'
FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.DBus'
FIELD_NAME mebr
TYPE STRING
STRING 'Hello'
FIELD_NAME srvc
TYPE STRING
STRING 'org.freedesktop.DBus'
ALIGN 8
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
